# cpp-errors

./: .clangd  .gitignore  CMakeLists.txt  README.md  design.md  exception.cpp  exception.hpp
include/: exception.hpp
src/: exception.cpp  exception.hpp
tests/: compile.sh  compile_flags.txt  exception.t.cpp  typederr.t.cpp
